--- a/worldGMS.properties
+++ b/worldGMS.properties
@@ -9,7 +9,7 @@ net.sf.odinms.login.serverName=Kerning Alpha
 # Admin Only or not
 net.sf.odinms.world.admin=false
 
-# Server Scrolling Messageí”²¿¹«¸æ
+# Server Scrolling MessageÃ­â€Â²Â¿Â¹Â«Â¸Ã¦
 net.sf.odinms.world.serverMessage=
 
 # Event Message at Channel Selection
@@ -24,15 +24,15 @@ net.sf.odinms.login.userlimit=100
 # Initial amount of characters per account
 net.sf.odinms.login.maxCharacters=3
 
-#ßx“ñ true/false
+#ÃŸxâ€œÃ± true/false
 net.sf.odinms.world.monsterSpawn=false
 
 net.sf.odinms.world.DEBUG=false
 
 # defaults for channelservers
-net.sf.odinms.world.interface=25.52.1.26
+net.sf.odinms.world.interface=127.0.0.1
 
-#•r…^ÔO¶¨
+#â€¢râ€¦^Ã”OÂ¶Â¨
 net.sf.odinms.world.TIMEZONE=GMT+8
 
 # active event scripts
